Add Opposing Force system

--- a/tgui/packages/tgui-panel/styles/goon/chat-light.scss
+++ b/tgui/packages/tgui-panel/styles/goon/chat-light.scss
@@ -945,3 +945,8 @@ h1.alert, h2.alert {
   font-style: italic;
   border-bottom: 1px dashed #000;
 }
+
+.pink {
+  color: #ff00ff;
+  font-weight: bold;
+}
